[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/HUD/Esc Menu/esc_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/button_tan_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Themes/button_tan_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Themes/button_tan_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Textures/UI/lamdev.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=9]

[sub_resource type="Gradient" id=2]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.597668 )
colors = PoolColorArray( 1, 0.933333, 0.835294, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 7 )

[node name="esc_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.219608 )

[node name="fade_bg" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )
expand = true
stretch_mode = 1
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.38
anchor_top = 0.33
anchor_right = 0.62
anchor_bottom = 0.67
alignment = 1

[node name="resume" type="Button" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Resume"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/resume"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "[color=#6a4420]Resume"
body = "Unpause the game!"

[node name="code_show" type="Button" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 460.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Show Lobby Code"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/code_show"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Show Lobby Code"
body = "Shows the current game's code, allowing you to send to friends to join!"

[node name="code_display" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 65.0
margin_right = 384.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/code_display"]
margin_right = 292.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="code" type="Label" parent="VBoxContainer/code_display/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "ABCDEF"
align = 1
valign = 1

[node name="copy_paste" type="Button" parent="VBoxContainer/code_display"]
margin_left = 296.0
margin_right = 384.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Copy"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/code_display/copy_paste"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Copy Lobby Code"
body = "Copies the lobby code to your clipboard."

[node name="spawn" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 460.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Return to Spawn"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/spawn"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Return to Spawn"
body = "Sends you back to the Hub at spawn."

[node name="settings" type="Button" parent="VBoxContainer"]
margin_top = 159.0
margin_right = 460.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Settings"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/settings"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Settings"
body = "Tweak game settings to your liking!"

[node name="save" type="Button" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 460.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Save Game"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/save"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Save Game"
body = "Forcefully save the game. (Game automatically saves every 5 minutes while playing.)"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 265.0
margin_right = 460.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Save and Quit To Main Menu"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/quit"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Save and Quit To Menu"
body = "Save the game, and return to the main menu."

[node name="quit_total" type="Button" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 460.0
margin_bottom = 367.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Save and Quit To Desktop"
script = ExtResource( 9 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/quit_total"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
header = "Save and Quit To Desktop"
body = "Save and close the game entirely."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.753646
anchor_top = 0.946296
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 252.0
margin_top = 4.0
margin_right = 410.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "lamedeveloper"
align = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 414.0
margin_right = 456.0
margin_bottom = 42.0
rect_min_size = Vector2( 42, 42 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/code_show" to="." method="_on_code_pressed"]
[connection signal="pressed" from="VBoxContainer/code_display/copy_paste" to="." method="_on_copy_paste_pressed"]
[connection signal="pressed" from="VBoxContainer/spawn" to="." method="_on_spawn_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_total" to="." method="_on_quit_total_pressed"]
